# Simulador-Renault

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1ebeaba  CMakeLists.txt.user.2dc7da8  CMakePresets.json  evaporator.cpp  evaporator.h  filereader.cpp  filereader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputData.csv  plotter.h  rtplotter.py  server_ws.py  wsconnector.cpp  wsconnector.h
Cabin/: CMakeLists.txt  cabin.cpp  cabin.h
Compressor/: CMakeLists.txt  compressor.cpp  compressor.h
ExpansionDevice/: CMakeLists.txt  expansiondevice.cpp  expansiondevice.h
HeatExchanger/: CMakeLists.txt  heatexchanger.cpp  heatexchanger.h
HeatExchanger/BatteryEvaporator/: CMakeLists.txt  batteryevaporator.cpp  batteryevaporator.h
HeatExchanger/Condenser/: CMakeLists.txt  condenser.cpp  condenser.h
HeatExchanger/DoubleEvaporator/: CMakeLists.txt  doubleevaporator.cpp  doubleevaporator.h
MqttConnect/: CMakeLists.txt  main.cpp  mqttconnect.cpp  mqttconnect.h  mymqtt.ui
PowerTrain/: CMakeLists.txt  powertrain.cpp  powertrain.h
WebSocketWorker/: CMakeLists.txt  websocketworker.cpp  websocketworker.h
